--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "@google-cloud/storage": "^1.3.1",
     "bluebird": "^3.1.1",
-    "ghost-storage-base": "0.0.3"
+    "ghost-storage-base": "0.0.3",
+    "fs-extra": "9.0.0",
+    "@tryghost/image-transform": "0.2.0"
   }
 }
